Add instructions on Eclipse / GTK+3 bug